src/test/deca/context/valid/class/subclass_with_field_name_decalred_in_superclass.deca
// Description:
// 	  same field in herited class
//
// Resultats:
// 
//  
// Historique:
// 	  cree le 18/01/2023

class A {
    int x;
    void method(){}
}

class B extends A {
    int x;
    void method(){}
}
